--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">SOS NOW</string>
+    <string name="message_error_load_contacts">Erro ao carregar os contatos</string>
+    <string name="action_maps">Mapas</string>
+    <string name="title_activity_maps">MapsActivity</string>
 </resources>
