--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,4 +13,5 @@
     <string name="map_marker_destination">Destino</string>
     <string name="map_current_location">Local atual</string>
     <string name="map_msg_search_route">Traçando rota…</string>
+    <string name="unknown_error">Erro desconhecido</string>
 </resources>
