--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,4 +19,5 @@
     <string name="img_recycler">Imagem do contato</string>
     <string name="img_splash">Imagem de abertura do app</string>
     <string name="fab">Botão flutuante pra fazer ligação</string>
+    <string name="no_internet_connection">Você tá sem internet</string>
 </resources>
